# jotai-rs

./: .gitignore  .gitmodules  .mcp.example.json  CLAUDE.md  Cargo.toml  QUICK_REFERENCE.md  README.md  SESSION_2_SUMMARY.md
.claude/: settings.local.json
src/: atom.rs  error.rs  internals.rs  lib.rs  store.rs  types.rs
src/utils/: atom_family.rs  mod.rs  select_atom.rs
tests/: basic_atoms.rs  derived_atoms.rs
